--- a/package.json
+++ b/package.json
@@ -1,22 +1,29 @@
 {
-  "//1": "describes your app and its dependencies",
-  "//2": "https://docs.npmjs.com/files/package.json",
-  "//3": "updating this file will download and update your packages",
-  "name": "hello-express",
+  "name": "code-academy-site",
   "version": "0.0.1",
   "description": "A simple Node app built on Express, instantly up and running.",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
+  "author": "barbarbar338, yashinu, alosha",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "bookman": "^1.6.4",
+    "url": "^0.11.0",
+    "express-handlebars": "^4.0.0",
+    "cookie-parser": "^1.4.5",
+    "body-parser": "^1.19.0",
+    "handlebars-helpers": "^0.10.0",
+    "path": "^0.12.7",
+    "passport": "^0.4.1",
+    "passport-discord": "^0.1.3",
+    "express-session": "^1.16.1",
+    "discord.js": "^12.1.1",
+    "random-string": "^0.2.0"
   },
   "engines": {
     "node": "12.x"
-  },
-  "repository": {
-    "url": "https://glitch.com/edit/#!/hello-express"
   },
   "license": "MIT",
   "keywords": [
