--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js"
   },
-  "author": "barbarbar338, yashinu, alosha",
+  "author": "bilal",
   "dependencies": {
     "express": "^4.17.1",
     "bookman": "^1.6.4",
